Refactor MRZ classes to improve code readability and maintainability Use java 21 Added spotless formatting